// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`counters fallback to 0 if no config values 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="personal-dashboard-impact__container"
  >
    <div
      class="personal-dashboard-impact__category"
    >
      <div
        class="personal-dashboard-impact__value"
      >
        <span
          class="cdx-icon cdx-icon--medium"
        >
          <svg
            aria-hidden="true"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <!--v-if-->
            <g>
              <path
                d="M15 9c-.82 2.33-2.39 3-5 3s-4.18-.67-5-3z"
              />
              <path
                d="M19 16H7.352l-3.75 3H1V1h18zm-16 .918 3.375-2.7.274-.218H17V3H3z"
              />
              <circle
                cx="6.5"
                cy="6.5"
                r="1.5"
              />
              <circle
                cx="13.5"
                cy="6.5"
                r="1.5"
              />
            </g>
          </svg>
        </span>
        <a
          href="/w/index.php?title=Special:Log&type=thanks&user=Test+User"
          id="personal-dashboard-thanks-link"
          target="_blank"
        >
          0
        </a>
      </div>
      <div
        class="personal-dashboard-impact__name"
      >
        <div>
          ⧼personal-dashboard-impact-thanks-sent⧽
        </div>
      </div>
    </div>
    <div
      class="personal-dashboard-impact__divider"
    />
    <div
      class="personal-dashboard-impact__category"
    >
      <div
        class="personal-dashboard-impact__value"
      >
        <span
          class="cdx-icon cdx-icon--medium"
        >
          <svg
            aria-hidden="true"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <!--v-if-->
            <g>
              <path
                d="M14 17h-4v-2h4zm2.404-13.163L6.22 16.8H4.9L.1 13.2l1.2-1.6 4.02 3.015 9.517-12.02zM17 13h-4v-2h4zm3-4h-4V7h4z"
              />
            </g>
          </svg>
        </span>
        <div>
          0
        </div>
      </div>
      <div
        class="personal-dashboard-impact__name"
      >
        <div>
          ⧼personal-dashboard-impact-edits-reviewed⧽
        </div>
        <button
          aria-label="⧼personal-dashboard-impact-info-button⧽"
          class="cdx-button cdx-button--action-default cdx-button--weight-quiet cdx-button--size-small cdx-button--icon-only"
        >
          
          <span
            class="cdx-icon cdx-icon--medium"
          >
            <svg
              aria-hidden="true"
              height="20"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <!--v-if-->
              <g>
                <path
                  d="M11 13h1v2H8v-2h1v-2H8V9h3zm0-6H9V5h2z"
                />
                <path
                  d="M10 1a9 9 0 110 18 9 9 0 010-18m0 2a7 7 0 100 14 7 7 0 000-14"
                />
              </g>
            </svg>
          </span>
          
        </button>
      </div>
    </div>
  </div>
  <teleport-stub
    disabled="false"
    to="body"
  >
    <!--v-if-->
    <transition-stub
      appear="true"
      css="true"
      name="cdx-popover-floating"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
    <!--v-if-->
  </teleport-stub>
  
</div>
`;

exports[`mount component 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="personal-dashboard-impact__container"
  >
    <div
      class="personal-dashboard-impact__category"
    >
      <div
        class="personal-dashboard-impact__value"
      >
        <span
          class="cdx-icon cdx-icon--medium"
        >
          <svg
            aria-hidden="true"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <!--v-if-->
            <g>
              <path
                d="M15 9c-.82 2.33-2.39 3-5 3s-4.18-.67-5-3z"
              />
              <path
                d="M19 16H7.352l-3.75 3H1V1h18zm-16 .918 3.375-2.7.274-.218H17V3H3z"
              />
              <circle
                cx="6.5"
                cy="6.5"
                r="1.5"
              />
              <circle
                cx="13.5"
                cy="6.5"
                r="1.5"
              />
            </g>
          </svg>
        </span>
        <a
          href="/w/index.php?title=Special:Log&type=thanks&user=Test+User"
          id="personal-dashboard-thanks-link"
          target="_blank"
        >
          1,234
        </a>
      </div>
      <div
        class="personal-dashboard-impact__name"
      >
        <div>
          ⧼personal-dashboard-impact-thanks-sent⧽
        </div>
      </div>
    </div>
    <div
      class="personal-dashboard-impact__divider"
    />
    <div
      class="personal-dashboard-impact__category"
    >
      <div
        class="personal-dashboard-impact__value"
      >
        <span
          class="cdx-icon cdx-icon--medium"
        >
          <svg
            aria-hidden="true"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <!--v-if-->
            <g>
              <path
                d="M14 17h-4v-2h4zm2.404-13.163L6.22 16.8H4.9L.1 13.2l1.2-1.6 4.02 3.015 9.517-12.02zM17 13h-4v-2h4zm3-4h-4V7h4z"
              />
            </g>
          </svg>
        </span>
        <div>
          4,321
        </div>
      </div>
      <div
        class="personal-dashboard-impact__name"
      >
        <div>
          ⧼personal-dashboard-impact-edits-reviewed⧽
        </div>
        <button
          aria-label="⧼personal-dashboard-impact-info-button⧽"
          class="cdx-button cdx-button--action-default cdx-button--weight-quiet cdx-button--size-small cdx-button--icon-only"
        >
          
          <span
            class="cdx-icon cdx-icon--medium"
          >
            <svg
              aria-hidden="true"
              height="20"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <!--v-if-->
              <g>
                <path
                  d="M11 13h1v2H8v-2h1v-2H8V9h3zm0-6H9V5h2z"
                />
                <path
                  d="M10 1a9 9 0 110 18 9 9 0 010-18m0 2a7 7 0 100 14 7 7 0 000-14"
                />
              </g>
            </svg>
          </span>
          
        </button>
      </div>
    </div>
  </div>
  <teleport-stub
    disabled="false"
    to="body"
  >
    <!--v-if-->
    <transition-stub
      appear="true"
      css="true"
      name="cdx-popover-floating"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
    <!--v-if-->
  </teleport-stub>
  
</div>
`;
